--- a/practice-2/package.json
+++ b/practice-2/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "practice-two",
+  "source": "src/index.html",
+  "scripts": {
+    "start": "parcel",
+    "build": "parcel build"
+  },
   "devDependencies": {
     "parcel": "^2.4.1"
   }
